--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,8 @@
 
 
     <div class="col-lg-3 col-md-6">
-        <div class="panel panel-success" style="cursor: pointer">
-            <div class="panel-heading" onclick="location.href='{{ url }}/clientes'">
+        <div class="panel panel-success">
+            <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
                         <i class="fa fa-briefcase fa-5x"></i>
@@ -63,8 +63,8 @@
 
 
     <div class="col-lg-3 col-md-6">
-        <div class="panel panel-primary" style="cursor: pointer">
-            <div class="panel-heading" onclick="location.href='{{ url }}/programadores'">
+        <div class="panel panel-primary">
+            <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
                         <i class="fa fa-users fa-5x"></i>
@@ -89,7 +89,7 @@
             Adicionar Problema</a>
     </div>
     <div class="col-md-6">
-        <a href="{{ url }}/topicos/novo" class="btn btn-lg btn-block btn-warning"><i
+        <a href="{{ url }}/topico/novo" class="btn btn-lg btn-block btn-warning"><i
                 class="fa fa-plus-square fa-1x"></i> Adicionar
             Tópico</a>
     </div>
