--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -23,7 +23,7 @@
                     Jean Carlos Farias
                 </a>
                 <ul class="dropdown-menu dropdown-user">
-                    <li><a href="{{ url }}/users/editar"><i class="fa fa-user fa-fw"></i> Editar Perfil</a>
+                    <li><a href="{{ url }}/usuarios/{{ session.user.id }}/editar"><i class="fa fa-user fa-fw"></i> Editar Perfil</a>
                     </li>
                     <li class="divider"></li>
                     <li><a href="{{ url }}/sair"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
