--- a/templates/topics/form.html
+++ b/templates/topics/form.html
@@ -11,7 +11,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Novo Problema
+                Novo Tópico
             </div>
             <div class="panel-body">
                 <div class="row">
@@ -157,6 +157,8 @@
     <!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->
+
+
 
 
 {% endblock %}
